--- a/Project DV1490/Project DV1490/Project DV1490.vcxproj
+++ b/Project DV1490/Project DV1490/Project DV1490.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{B5C5867D-B0F3-4908-A92C-AE1FBEF01970}</ProjectGuid>
     <RootNamespace>ProjectDV1490</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <ProjectName>Project DV1490 Uppdated</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -116,9 +117,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Operation.cpp" />
+    <ClCompile Include="OperationHandler.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="List.h" />
+    <ClInclude Include="Operation.h" />
+    <ClInclude Include="OperationHandler.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
